# hdx-scraper-cesa

./: .gitignore  CONTRIBUTING.md  README.md  cesa.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py
.config/: hdx_dataset_static.yaml  pre-commit-config.yaml  project_configuration.yaml
.github/workflows/: run-python-script.yaml  run-python-tests.yaml
config/: hdx_dataset_static.yaml
src/hdx/scraper/cesa/: __main__.py  cesa.py
src/hdx/scraper/cesa/config/: project_configuration.yaml
tests/: test_cesa.py
tests/fixtures/: earthquake_reports_idn.geojson  volcano_reports_idn.geojson  wind_reports_idn.geojson
tests/fixtures/input/: reports-timeperiod-604800-geoformat-geojson-disaster-earthquake.json  reports-timeperiod-604800-geoformat-geojson-disaster-flood.json  reports-timeperiod-604800-geoformat-geojson-disaster-volcano.json  reports-timeperiod-604800-geoformat-geojson-disaster-wind.json
